--- a/frontend/src/pages/CoursePage/ui/CoursePage.module.scss
+++ b/frontend/src/pages/CoursePage/ui/CoursePage.module.scss
@@ -1,14 +1,78 @@
+.mudulesTitle {
+  font-size: 28px;
+  margin-bottom: 12px;
+}
+
+.modules {
+  background-color: #fff;
+  padding: 42px 24px;
+  border-radius: 12px;
+}
+
 .modulesList {
-  font-weight: 700;
+  font-weight: 500;
 
   .moduleItem {
     cursor: pointer;
+    font-size: 20px;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+    padding: 10px 12px;
+
+    .moduleListTitle {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 
   .moduleLessons {
     .lessonItem {
       font-weight: 400;
-      padding: 4px;
+      font-size: 18px;
+      padding: 4px 20px;
+    }
+  }
+}
+
+.courseInfo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 100%;
+  height: 300px;
+  margin-top: 40px;
+  border-radius: 12px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  overflow: hidden;
+  padding: 10px 82px;
+
+  .courseTextInfo {
+
+    h1 {
+      font-size: 30px;
+      font-weight: 700;
+    }
+
+    p {
+      font-size: 20px;
+    }
+  }
+
+
+  .imgCourse {
+    width: 240px;
+    height: 240px;
+    object-fit: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
     }
   }
 }
