--- a/frontend/src/app/styles/index.scss
+++ b/frontend/src/app/styles/index.scss
@@ -4,5 +4,13 @@ body {
   background-color: rgba(99, 99, 99, 0.083) !important;
   iframe {
     max-width: 100%;
+
+
+  }
+
+  img {
+    width: 100%;
+    object-fit: contain;
+    height: auto;
   }
 }
